--- a/x360ce.App/x360ce.App.csproj
+++ b/x360ce.App/x360ce.App.csproj
@@ -174,6 +174,7 @@
     <Compile Include="Common\DeadZoneControlsLink.cs" />
     <Compile Include="Common\DirectInputState.cs" />
     <Compile Include="Common\Extensions.cs" />
+    <Compile Include="Common\GameDatabaseManager.cs" />
     <Compile Include="Common\HookMode.cs" />
     <Compile Include="Common\KeyValuePair.cs" />
     <Compile Include="Common\RuntimePolicyHelper.cs" />
