--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -174,6 +174,7 @@
     <Compile Include="JocysCom\Win32\DEV_BROADCAST_VOLUME.cs" />
     <Compile Include="JocysCom\Win32\DIGCF.cs" />
     <Compile Include="JocysCom\Win32\NativeMethods.cs" />
+    <Compile Include="JocysCom\Win32\NativeMethods.kernel32.cs" />
     <Compile Include="JocysCom\Win32\POINT.cs" />
     <Compile Include="JocysCom\Win32\RECT.cs" />
     <Compile Include="JocysCom\Win32\REG.cs" />
