Add web tracing and log file rolling log file.

--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -118,7 +118,10 @@
 		</webServices>
 	</system.web>
 	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true"/>
+		<modules runAllManagedModulesForAllRequests="true">
+			<!-- Enabling HTTP tracing in ASP.NET Web Services -->
+			<add name="MyHttpModule" type="JocysCom.ClassLibrary.Web.Services.HttpLogModule,x360ce.Engine" />
+		</modules>
 		<handlers>
 			<remove name="UrlRoutingHandler"/>
 			<!--<add name="UrlRoutingHandler" preCondition="integratedMode" verb="*" path="UrlRouting.axd" type="System.Web.Routing.UrlRoutingHandler, System.Web.Routing, Version=3.5.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35"/>-->
@@ -205,13 +208,20 @@
 			<!-- Enabling Tracing in ASP.NET Web Services -->
 			<source name="System.Web.Services.Asmx" switchValue="Verbose">
 				<listeners>
-					<add name="TraceLogFile" />
+					<add name="TraceRolFile" type="" />
+				</listeners>
+			</source>
+			<!-- Enabling HTTP tracing in ASP.NET Web Services -->
+			<source name="HttpLogModule" switchValue="Verbose">
+				<listeners>
+					<add name="TraceRolFile" />
 				</listeners>
 			</source>
 		</sources>
 		<sharedListeners>
 			<!-- Files can be opened with SvcTraceViewer.exe. make sure that IIS_IUSRS group has write permissions on this folder. -->
-			<add name="TraceSvcFile" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\ProgramData\X360CE\Logs\WebServices.svclog" />
+			<add name="TraceSvcFile" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\ProgramData\X360CE\Logs\WebServices.svclog"  traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, ProcessId, ThreadId" />
+			<add name="TraceRolFile" type="JocysCom.ClassLibrary.Diagnostics.RollingXmlWriterTraceListener, x360ce.Engine" initializeData="c:\ProgramData\X360CE\Logs\WebServices.svclog"  traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, ProcessId, ThreadId" />
 			<add name="TraceLogFile" type="System.Diagnostics.TextWriterTraceListener" initializeData="c:\ProgramData\X360CE\Logs\WebServices.log" traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, ProcessId, ThreadId" />
 			<add name="TraceConsole" type="System.Diagnostics.ConsoleTraceListener" />
 		</sharedListeners>
