--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -230,6 +230,7 @@
     </Compile>
     <Compile Include="JocysCom\Controls\ToolStripBorderlessRenderer.cs" />
     <Compile Include="JocysCom\Data\SqlHelper.cs" />
+    <Compile Include="JocysCom\Diagnostics\RollingXmlWriterTraceListener.cs" />
     <Compile Include="JocysCom\Drawing\Effects\Brightness.cs" />
     <Compile Include="JocysCom\Drawing\Effects\Common.cs" />
     <Compile Include="JocysCom\Drawing\Effects\Grayscale.cs" />
@@ -316,6 +317,7 @@
     <Compile Include="JocysCom\Text\Helper.cs" />
     <Compile Include="JocysCom\Threading\QueueTimer.cs" />
     <Compile Include="JocysCom\Threading\QueueTimerEventArgs.cs" />
+    <Compile Include="JocysCom\Web\Services\HttpLogModule.cs" />
     <Compile Include="JocysCom\Web\Services\TraceExtension.cs" />
     <Compile Include="JocysCom\Web\Services\TraceExtensionAttribute.cs" />
     <Compile Include="JocysCom\Web\WebControlsHelper.cs" />
