Clean-up project.

--- a/x360ce.Engine/x360ce.Engine.csproj
+++ b/x360ce.Engine/x360ce.Engine.csproj
@@ -458,9 +458,7 @@
   <ItemGroup>
     <Content Include="JocysCom\Extensions\ReadMe.txt" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="JocysCom\ClassTools\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>
