--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -120,7 +120,7 @@
 	<system.webServer>
 		<modules runAllManagedModulesForAllRequests="true">
 			<!-- Enabling HTTP tracing in ASP.NET Web Services -->
-			<add name="MyHttpModule" type="JocysCom.ClassLibrary.Web.Services.HttpLogModule,x360ce.Engine" />
+			<add name="MyHttpModule" type="JocysCom.ClassLibrary.Diagnostics.RawDataLogHttpModulee,x360ce.Engine" />
 		</modules>
 		<handlers>
 			<remove name="UrlRoutingHandler"/>
@@ -212,7 +212,7 @@
 				</listeners>
 			</source>
 			<!-- Enabling HTTP tracing in ASP.NET Web Services -->
-			<source name="HttpLogModule" switchValue="Verbose">
+			<source name="RawDataLogHttpModule" switchValue="Verbose">
 				<listeners>
 					<add name="TraceRolFile" />
 				</listeners>
