Web security updates.

--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -49,16 +49,11 @@
 			</authorization>
 		</system.web>
 	</location>
-	<!--
-    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
-
-    The following attributes can be set on the <httpRuntime> tag.
-      <system.Web>
-        <httpRuntime targetFramework="4.5" />
-      </system.Web>
-  -->
+	<!--IIS 6.0 Configuration - Classic Mode -->
 	<system.web>
 		<customErrors mode="Off"/>
+		<!-- Fix Information Disclosure vulnerability by removing 'X-AspNet-Version' header with enableVersionHeader="false" attribute. -->
+		<httpRuntime enableVersionHeader="false" />
 		<httpHandlers>
 			<add path="ChartImg.axd" verb="GET,HEAD,POST" type="System.Web.UI.DataVisualization.Charting.ChartHttpHandler, System.Web.DataVisualization, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" validate="false"/>
 		</httpHandlers>
@@ -117,7 +112,15 @@
 			</protocols>
 		</webServices>
 	</system.web>
+	<!--IIS 7.0+ Configuration - Integrated Mode -->
 	<system.webServer>
+		<security>
+			<!-- Fix Information Disclosure vulnerability by removing 'Server' header from HTTP response.
+				Note: Works on IIS 8.0+ only and required Request Filtering module on IIS. -->
+			<!--<requestFiltering removeServerHeader="true">-->
+		</security>
+		<!-- Fix Information Disclosure vulnerability by making sure that even static content will use Global.asax.cs -->
+		<!-- Please note that extra CPU resources will be used. -->
 		<modules runAllManagedModulesForAllRequests="true">
 			<!-- Enabling HTTP tracing in ASP.NET Web Services -->
 			<add name="MyHttpModule" type="JocysCom.ClassLibrary.Diagnostics.RawDataLogHttpModulee,x360ce.Engine" />
@@ -187,6 +190,32 @@
 					<add key="OFF" value="http://"/>
 				</rewriteMap>
 			</rewriteMaps>
+			<outboundRules>
+				<!-- Fix Missing HTTP Header vulnerability -->
+				<!-- Send "strict-transport-security: max-age=31536000" response header when user can trust website over HTTPS -->
+				<!-- This will force browser to stay on HTTPS even if domain links points to non-secure HTTP -->
+				<!-- Browser will remember this option. You can clear it on Internet Explorer: F12 -> Network -> [Clear Cache] button.  -->
+				<!--<rule name="Add Strict-Transport-Security when HTTPS - LIVE" enabled="true">
+					<match serverVariable="RESPONSE_Strict_Transport_Security" pattern=".*" />
+					<conditions>
+						<add input="{HTTPS}" pattern="ON" />
+						--><!-- Exclude DEV, TEST and local machine (debugging). --><!--
+						<add input="{HTTP_HOST}" pattern="^\w*(dev|test|local)" negate="true" />
+					</conditions>
+					--><!-- All present and future sub-domains will be HTTPS for a max-age of 1 year. --><!--
+					<action type="Rewrite" value="max-age=31536000; includeSubDomains" />
+				</rule>
+				<rule name="Add Strict-Transport-Security when HTTPS - TEST" enabled="true">
+					<match serverVariable="RESPONSE_Strict_Transport_Security" pattern=".*" />
+					<conditions>
+						<add input="{HTTPS}" pattern="ON" />
+						--><!-- Include DEV, TEST and local machine (debugging). --><!--
+						<add input="{HTTP_HOST}" pattern="^\w*(dev|test|local)" />
+					</conditions>
+					--><!-- All present and future sub-domains will be HTTPS for a max-age of 10 seconds. 10 --><!--
+					<action type="Rewrite" value="max-age=10; includeSubDomains" />
+				</rule>-->
+			</outboundRules>
 		</rewrite>
 		<validation validateIntegratedModeConfiguration="false"/>
 	</system.webServer>
