--- a/x360ce.Web/Web.config
+++ b/x360ce.Web/Web.config
@@ -123,7 +123,7 @@
 		<!-- Please note that extra CPU resources will be used. -->
 		<modules runAllManagedModulesForAllRequests="true">
 			<!-- Enabling HTTP tracing in ASP.NET Web Services -->
-			<add name="MyHttpModule" type="JocysCom.ClassLibrary.Diagnostics.RawDataLogHttpModulee,x360ce.Engine" />
+			<add name="MyHttpModule" type="JocysCom.ClassLibrary.Diagnostics.RawDataLogHttpModule,x360ce.Engine" />
 		</modules>
 		<handlers>
 			<remove name="UrlRoutingHandler"/>
@@ -243,7 +243,7 @@
 			<!-- Enabling HTTP tracing in ASP.NET Web Services -->
 			<source name="RawDataLogHttpModule" switchValue="Verbose">
 				<listeners>
-					<add name="TraceRolFile" />
+					<add name="TraceRawFile" />
 				</listeners>
 			</source>
 		</sources>
@@ -251,6 +251,7 @@
 			<!-- Files can be opened with SvcTraceViewer.exe. make sure that IIS_IUSRS group has write permissions on this folder. -->
 			<add name="TraceSvcFile" type="System.Diagnostics.XmlWriterTraceListener" initializeData="c:\ProgramData\X360CE\Logs\WebServices.svclog"  traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, ProcessId, ThreadId" />
 			<add name="TraceRolFile" type="JocysCom.ClassLibrary.Diagnostics.RollingXmlWriterTraceListener, x360ce.Engine" initializeData="c:\ProgramData\X360CE\Logs\WebServices.svclog"  traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, ProcessId, ThreadId" />
+			<add name="TraceRawFile" type="JocysCom.ClassLibrary.Diagnostics.RollingXmlWriterTraceListener, x360ce.Engine" initializeData="c:\ProgramData\X360CE\Logs\WebServicesRaw.svclog"  traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, ProcessId, ThreadId" />
 			<add name="TraceLogFile" type="System.Diagnostics.TextWriterTraceListener" initializeData="c:\ProgramData\X360CE\Logs\WebServices.log" traceOutputOptions="LogicalOperationStack, DateTime, Timestamp, ProcessId, ThreadId" />
 			<add name="TraceConsole" type="System.Diagnostics.ConsoleTraceListener" />
 		</sharedListeners>
